components/blocks/collapse.module.css
.Container {
  @apply py-4;
}

.PanelHeading {
  @apply border border-gray-20 rounded-md p-3 cursor-pointer;
}

.PanelTitle {
  @apply list-none flex items-center mb-0 transition ease-in-out duration-75 hover:opacity-80;
}

.Title {
  @apply flex-1;
}

.PanelIcon {
  @apply transition duration-75 text-gray-70;
}

.RotatedIcon {
  transform: rotate(180deg);
}

/* Dark mode */
:global(.dark) .PanelHeading {
  @apply border-gray-90;
}

.PanelContent {
  @apply pt-4;
}

